styles/index.css
.sessionModal {
    border: none;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    padding: 10px;
    width: 300px;

    p {
        margin: 0;
        padding: 0;
    }

    .closeButton {
        position: absolute;
        top: 10px;
        right: 10px;
        background: none;
        border: none;
        cursor: pointer;
        font-size: 24px;
        color: #000;
    }

    form {
        fieldset {
            border: none;
            padding: 0;
            margin: 0;
        }

        label {
            display: block;
            margin-top: 10px;
            font-size: 14px;
            font-weight: 600;
        }

        input {
            padding: 5px;
            margin-top: 5px;
            border: 1px solid var(--color-border);
            border-radius: 4px;
        }

        button {
            display: flex;
            margin-top: 10px;
            padding: 5px 10px;
            border: none;
            border-radius: 4px;
            background-color: var(--color-primary);
            color: #000;
            cursor: pointer;
            font-size: 16px;
            align-items: center;

            svg {
                fill: #000;
                margin-right: 5px;
            }
        }

        #deleteSessionButton {
            color: #fff;
            background-color: var(--color-error);

            svg {
                fill: #fff;
            }
        }
    }

    .modalInputError {
        display: flex;
        align-items: center;
        color: var(--color-error);
        font-size: 12px;
        margin-top: 5px;

        svg {
            fill: var(--color-error);
            margin-right: 5px;
        }
    }
}

#pastSessionsList {
    display: flex;
    flex-direction: column;
    list-style: none;
    padding: 0;
    margin: 0;

    .sessionItemContainer {
        display: block;
        border: 1px solid var(--color-border);
        border-bottom: none;
        background-color: #fff;

        p {
            margin: 16px;
        }

        .sessionInfo {
            display: flex;
            justify-content: space-between;
            align-items: center;
            /*overflow: scroll;*/

            p {
                white-space: nowrap;
            }

            .sessionEditButton {
                height: 24px;
                width: auto;
                margin: 16px;
                background: none;
                border: none;
                cursor: pointer;
                font-size: 24px;
                color: #000;

                svg {
                    fill: #000;
                }
            }
        }
    }

    .sessionItemContainer:first-child {
        border-top-left-radius: 8px;
        border-top-right-radius: 8px;
    }

    .sessionItemContainer:last-child {
        border-bottom-left-radius: 8px;
        border-bottom-right-radius: 8px;
        border-bottom: 1px solid var(--color-border);
        border-bottom: 1px solid var(--color-border);
    }
}

@media (max-width: 840px) {
    #pastSessionsList .sessionItemContainer .sessionInfo {
        overflow: scroll;
    }
}

